// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a skeleton representation of a container item 1`] = `
<SkeletonContainerItemWrapper>
  <Skeleton
    size="medium"
    weight="normal"
  />
  <HiddenWhenCollapsed
    isCollapsed={false}
  >
    <SkeletonContainerItemText />
  </HiddenWhenCollapsed>
</SkeletonContainerItemWrapper>
`;

exports[`shows a compact version when collapsed 1`] = `
<SkeletonContainerItemWrapper>
  <Skeleton
    size="medium"
    weight="normal"
  />
  <HiddenWhenCollapsed
    isCollapsed={true}
  >
    <SkeletonContainerItemText />
  </HiddenWhenCollapsed>
</SkeletonContainerItemWrapper>
`;
